--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
 2020.02.10:
+* changed: readme update
+
+2020.02.10:
 * new: changelog
 * new: the library repository changes at release 3.1.3 (2019.10.28) from https://www.wxwidgets.org/downloads/
